z-index fix

--- a/src/scss/widget.scss
+++ b/src/scss/widget.scss
@@ -17,7 +17,7 @@
     height: 100%;
     background-color: #000;
     width: 360px;
-    z-index: 999;
+    z-index: 999999999999999;
     overflow: hidden;
     flex-direction: column;
     background-color: #fff;
